tdf#158179 Fix layer tab menu layer visibility check menu item

Renames/reworks the layer tab context menu visibility check menu item
from 'Show Layer' to 'Hide layer' and fixes a bug that causes the
check menu item to be set as the layer visibility setting of the
previously selected layer tab.

Change-Id: I81f1910f95df50255e61115b5d8de8ed3ef8bd89
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159427
Tested-by: Jenkins
Tested-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>